# pinocchio

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
.hooks/: pre-commit
src/: key_gen.rs  lib.rs  main.rs  verify.rs
src/traits/: proof.rs  verify.rs
