[package]
name = "pinocchio"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pinocchio"
test = true
bench = false

[dependencies]
anyhow = "1.0.93"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
log = "0.4.22"
serde = "1.0.215"

[profile.release]
lto = "fat"
incremental = true

[profile.dev]
debug = 0
strip = "debuginfo"
